# OpenInventory

./: .claude-context-snapshot.md  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  TODOS.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  run-cargo-app.cmd  run-cargo-release.cmd  run-tauri-dev.cmd  run-tauri-dev.ps1  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vite.preview.config.ts  vitest.config.node.ts  vitest.config.ts  vitest.coverage.config.ts  vitest.workspace.ts
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-push
designs/: design-system-components.pen
docs/: e2e-optimization-plan.md  inventory-app-architecture.md  production-hardening-todo.md  production-operations.md  update-migration-hardening.md
e2e/: README.md  audit-view.spec.ts  audit.spec.ts  backup-error.spec.ts  backup-overdue.spec.ts  backup-restore-handoff.spec.ts  backup.spec.ts  dashboard.spec.ts  desktop-no-qr.spec.ts  graceful-shutdown.spec.ts  inventory-crud.spec.ts  inventory-discovery.spec.ts  (+15 more)
src-tauri/: Cargo.toml  cargo-check.cmd  cargo-release.cmd  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/application/: inventory_service.rs
src-tauri/src/domain/: error.rs  models.rs
src-tauri/src/infrastructure/: backup.rs  db.rs  lan.rs  migrations.rs  mod.rs  qr.rs  schema.rs  schema.sql
(+219 files in other folders)
