[package]
name = "inventory-monitor"
version = "0.1.0"
edition = "2021"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "inventory_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.7"
base64 = "0.22"
include_dir = "0.7"
local-ip-address = "0.6"
mime_guess = "2"
png = "0.17"
qrcodegen = "1.8"
rand = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
